NDMP dissector not handling fragment header in one frame and rest of NDMP PDU in the next packet
This issue was migrated from bug 5462 in our old bug tracker.
Original bug information:
Reporter: Frank Schorr
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: Windows XP
Platform: Other
Version: 1.4.1
Attachments:
ndmp_vs_tcpencap.patch: Have NDMP explicitly use port 10000
ndmp-bug.cap: Capture showing the reported problem